# AI-Stacks

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.github/workflows/: ci.yml
docs/: plan-ten-102.md
docs/adr/: 001-monorepo-structure.md
docs/framesight/: README.md
docs/framesight/adrs/: ADR-001-indexing-engine.md  ADR-002-database-schema.md  ADR-003-ml-platform.md
docs/security/: security-profile.md
projects/ai-service/: .env.example  README.md  package.json  tsconfig.json
projects/ai-service/src/: index.ts
projects/ai-service/src/routes/: health.ts  summarization.ts
projects/api-gateway/: .env.example  README.md  package.json  tsconfig.json  tsconfig.tsbuildinfo
projects/api-gateway/src/: index.ts
projects/framesight-graph/: .env.example  .gitignore  README.md  docker-compose.yml
projects/framesight-graph/config/: graph-node.toml
projects/framesight-graph/docs/: queries.md
projects/framesight-graph/subgraph-deployer/: Dockerfile  deploy.sh
projects/framesight-indexer/: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml
projects/framesight-indexer/src/: config.rs  main.rs
projects/framesight-indexer/src/api/: mod.rs
projects/framesight-indexer/src/contracts/: mod.rs
projects/framesight-indexer/src/db/: mod.rs
projects/framesight-indexer/src/events/: mod.rs
projects/framesight-indexer/src/indexer/: mod.rs
tools/infrastructure/cicd/: README.md
tools/infrastructure/db-migration/: .env.example  01_schema.sql  02_seed.sql  README.md  docker-compose.yml  migrate.py  validate.py
tools/infrastructure/observability/: README.md  docker-compose.yml
(+33 files in other folders)
