[package]
name = "framesight-indexer"
version = "0.1.0"
edition = "2021"
authors = ["FrameSight Team"]
description = "Custom Rust indexer for ERC-8141 Account Abstraction and intent-centric analytics"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

# Web3 / Ethereum
ethers = { version = "2.0", features = ["ws", "rustls"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1"] }
deadpool-postgres = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Kafka (optional, for message queue)
rdkafka = { version = "0.36", features = ["tokio", "ssl-vendored"], optional = true }

# HTTP API (for health checks and metrics)
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["trace"], optional = true }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
hex = "0.4"
sha3 = "0.10"
ethabi = "18.2"
futures = "0.3"
async-trait = "0.1"

[features]
default = ["api"]
kafka = ["dep:rdkafka"]
api = ["dep:axum", "dep:tower", "dep:tower-http"]

[[bin]]
name = "framesight-indexer"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
